--- a/src/index.css
+++ b/src/index.css
@@ -18,15 +18,15 @@ code {
   margin:auto;
   margin-top: 3%;
   border: 1px solid black;
-  background: #cccccc;
+  background: #b4b4b4;
   border-radius: 30px;
 }
 .screen{
   height:47%;
-  border: 1px solid black;
+  border: 2px solid black;
   margin:3%;
   border-radius: 8px;
-  background-color: rgb(66, 62, 62);
+  background-color: rgb(99, 88, 88);
 }
 .buttons{
   height:50%;
@@ -45,7 +45,7 @@ code {
 .inner-div{
   width: 95%;
   height:95%;
-  background: #f0e7e7;
+  background: #f9faf9;
   margin: 5px auto;
   border-radius: 100%;
   overflow: hidden;
